--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,8 @@
 = rails-standard-extensions
 
-Description goes here.
+This gem consists of little helper functions I find handy when writing and debugging rails app (and ruby in general).
 
+ 
 == Copyright
 
 Copyright (c) 2009 Mat Holroyd. See LICENSE for details.
