Added some tests, bumping version

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,7 @@
-= rails-standard-extensions
+= Rails Extensions
 
-This gem consists of little helper functions I find handy when writing and debugging rails app (and ruby in general).
+This gem consists of little helper functions found to be handy when writing and debugging rails app (and ruby in general).
 
- 
 == Copyright
 
 Copyright (c) 2009 Mat Holroyd. See LICENSE for details.
